Fri Mar 26 04:09:24 2010  Akinori MUSHA  <knu@iDaemons.org>

	* prelude.rb, Makefile.in, common.mk: Introduce prelude.rb.

	* eval.c (rb_eval_prelude): New function exported only for use in
	  preludes.

	* configure.in: Define RUBY_EXEC_PREFIX and RUBY_LIB_PREFIX.

	* ruby.c (proc_options, ruby_init_loadpath, ruby_prelude): Load
	  prelude.

	* compile_prelude.rb: Port the prelude compiler from trunk.

	* miniprelude.c: Currently miniruby does not include prelude.rb.

Fri Mar 26 03:58:37 2010  Akinori MUSHA  <knu@iDaemons.org>

	* variable.c, intern.h: Add rb_const_remove().

Fri Mar 26 03:09:30 2010  Akinori MUSHA  <knu@iDaemons.org>

	* object.c (rb_obj_singleton_class): new method
	  Kernel#singleton_class.  [ruby-core:21702]

Thu Mar 25 03:52:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/iconv/charset_alias.rb: update of URL.  [ruby-dev:38360]

Wed Mar 24 18:16:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (LDSHARED, CPP): keep $(CC).  [ruby-core:28912]

Mon Mar 22 19:32:34 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (Date#>>): fixed.  [ruby-core:28011]

Sat Mar 20 12:30:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib: fixed typo.  a patch by Sho Hashimoto in [ruby-dev:40716].

Fri Mar 19 17:12:34 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.h (RSTRING_*, RARRAY_*, RREGEXP_*, RSTRUCT_*, RBIGNUM_*):
	  ensure non-lvalue for compatibility with 1.9.

Thu Mar 18 13:51:22 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c, eval.c, process.c: add linux to r26371's condition.
	  patched by Motohiro KOSAKI [ruby-core:28151]

Wed Mar 17 06:39:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.h (rb_warning, rb_sys_warning): fixed typo in rdoc.
	  [ruby-core:28696]

Sat Mar 13 11:06:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (numchar_getc): get rid of buffer
	  overflow.  [ruby-dev:40606]

Sat Mar 13 10:03:52 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
