@@ -1,3 +1,14 @@
+Fri Mar 26 04:52:19 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
+
+	* ext/tk/extconf.rb: fix [ruby-core:28901] [Bug #2997].
+	  Thanks, Michael Graff.
+
+	* ext/tk/tcltklib.c: use xfree() for memories allocated by ALLOC().
+
+	* ext/tk/tkutil/tkutil.c: ditto.
+
+	* ext/tk/lib/tkextlib/version.rb: forgot updating.
+
 Fri Mar 26 04:09:24 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* prelude.rb, Makefile.in, common.mk: Introduce prelude.rb.
